<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeetUworld</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="emailConfirmation">Confirmer votre Email</string>
    <string name="password">Mot de passe</string>
    <string name="passwordConfirmation">Confirmer votre Mot de passe</string>
    <string name="connection">Connexion</string>
    <string name="logo">Logo_APP</string>
    <string name="inscription">inscrivez-vous</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="homePage">Page Home</string>
    <string name="title_activity_inscription_page">inscriptionPage</string>
    <string name="inscriptionPage">Inscription</string>
    <string name="nomUtilisateur">Nom </string>
    <string name="prenomUtilisateur">Prenom</string>
    <string name="inscriptionPage_confirmer">Confirmer</string>

    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:textSize">15sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

    <style name="ConnexionButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#FFFFFF</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">15dp</item>
    </style>

    <style name="FacebookButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#FFFFFF</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">15dp</item>
    </style>

    <string name="title_activity_connection_page">ConnectionPage</string>
    <string name="failed">Erreur</string>
    <string name="serveurAdd">http://www.l4h.be</string>
    <string name="connexionAdd">/TFE/android/connexion.php</string>
    <string name="modifMotDePasse">/TFE/android/modifMotDePasse.php</string>
    <string name="pageInscription">/TFE/android/pageInscription.php</string>
    <string name="pageProfil">/TFE/android/profil.php</string>
    <string name="pageModifierProfil">/TFE/android/modifierProfil.php</string>
    <string name="pageModifierMotDePasse">/TFE/android/Outils/modifierMdp.php</string>
    <string name="pageAjouterVoyage">/TFE/android/ajouterVoyage.php</string>
    <string name="pageModifierVoyage">/TFE/android/modifierVoyage.php</string>
    <string name="pageSupprimerVoyage">/TFE/android/supprimerVoyage.php</string>
    <string name="listPays">/TFE/android/Outils/listPays.php</string>
    <string name="listVoyageUser">/TFE/android/Outils/listVoyageUser.php</string>
    <string name="upload_avatar">/TFE/android/Outils/uploadAvatar.php</string>
    <string name="listGuideUser">/TFE/android/Outils/listGuideUser.php</string>
    <string name="listVoyages">/TFE/android/Outils/listVoyages.php</string>
    <string name="afficheVoyages">/TFE/android/Outils/afficheVoyage.php</string>
    <string name="devenirGuide">/TFE/android/devenirGuide.php</string>
    <string name="deleteGuide">/TFE/android/deleteGuide.php</string>
    <string name="connection_error">Erreur de connexion</string>
    <string name="waiting_message">Chargement</string>
    <string name="title_activity_profil__page">profil_Page</string>


    <string name="profil_page_email">Email :</string>
    <string name="title_activity_tab_profil">TabProfil</string>

    <string name="profil_page_nom">Nom :</string>
    <string name="profil_page_prenom">Prenom :</string>
    <string name="profil_page_editVille">Entrez Votre Ville</string>
    <string name="profil_page_editEmail">Entrez Votre Email</string>
    <string name="profil_page_editNom">Entrez votre Nom</string>
    <string name="profil_page_editPrenom">Entrez votre Prenom</string>
    <string name="profil_page_pays">Pays :</string>
    <string name="profil_page_ville">Ville :</string>
    <string name="profil_page_bouton">Modifier informations</string>
    <string name="profil_page_sendNewProfil">Envoyer</string>

    <string name="addTravel_page_dateArrive">Date d\'Arrivée :</string>
    <string name="addTravel_page_dateDepart">Date de départ :</string>
    <string name="addTravel_page_Edit_dateA">MM/JJ/AAAA</string>
    <string name="addTravel_page_Edit_dateD">MM/JJ/AAAA</string>
    <string name="addTravel_page_poi">POI :</string>

    <string name="hello_world">Hello world!</string>
    <string name="oui_text">Oui</string>
    <string name="non_text">Non</string>
    <string name="enregistrer_text">Enregistrer</string>
    <string name="title_activity_tab_home">TabHome</string>
    <string name="title_activity_tab_new_travel">TabNewTravel</string>
    <string name="title_activity_modifier_profil">modifierProfil</string>
    <string name="title_activity_add_travel">addTravel</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_info_voyage">infoVoyage</string>
    <string name="title_activity_itineraire_page">ItinerairePage</string>
    <string name="title_activity_tab_guide">TabGuide</string>
    <string name="title_activity_reset_pwd">ResetPwd</string>
    <string name="title_activity_modifier_voyage">ModifierVoyage</string>








</resources>
