<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#E0E0E0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:paddingBottom="100dp"
            tools:context="com.obisteeves.meetuworld.PageAndroid.AddTravel">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/profil_page_pays"
                android:textColor="@color/button_material_dark"
                android:textSize="18sp"
                android:textStyle="italic" />
            <Spinner
                android:id="@+id/listPays"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/profil_page_ville"
                android:textColor="@color/button_material_dark"
                android:textSize="18sp"
                android:textStyle="italic" />
            <EditText
                android:id="@+id/addVoyageVille"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#212121" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/addTravel_page_dateArrive"
                android:textColor="@color/button_material_dark"
                android:textSize="18sp"
                android:textStyle="italic" />
            <TextView
                android:id="@+id/DateArrivee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:hint="@string/addTravel_page_Edit_dateA"
                android:onClick="showDatePickerDialog"
                android:textColor="#212121"
                android:textColorHint="#212121" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/addTravel_page_dateDepart"
                android:textColor="@color/button_material_dark"
                android:textSize="18sp"
                android:textStyle="italic" />
            <TextView
                android:id="@+id/DateDepart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginLeft="10dp"
                android:clickable="true"
                android:hint="@string/addTravel_page_Edit_dateD"
                android:onClick="showDatePickerDialog2"
                android:textColor="#212121"
                android:textColorHint="#212121" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/addTravel_page_poi"
                android:textColor="@color/button_material_dark"
                android:textSize="18sp"
                android:textStyle="italic" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/add"
                    style="@style/ConnexionButtonText"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_margin="20dp"
                    android:background="@drawable/button_connection_page"
                    android:text="+"
                    android:textSize="24dp" />
                <EditText
                    android:id="@+id/textin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="20dp"
                    android:layout_toLeftOf="@id/add"
                    android:hint="rajouter un Poi" />


            </RelativeLayout>
            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>